pkg/ibmvpc/examples/out/analysis_out/iks_workers_large_all_vpcs__with_grouping.txt
Endpoint connectivity for VPC us-south-default-vpc
Public Internet (all ranges) => rhel9-1[10.240.64.7],rhel9[10.240.64.6] : protocol: ICMP icmp-type: 8; protocol: TCP dst-ports: 22
rhel9-1[10.240.64.7],rhel9[10.240.64.6] => Public Internet (all ranges) : All Connections
rhel9-1[10.240.64.7],rhel9[10.240.64.6] => rhel9-1[10.240.64.7],rhel9[10.240.64.6] : All Connections

Endpoint connectivity for VPC vpc3dc
Public Internet (all ranges) => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP
Public Internet (all ranges) => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6], [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],ik [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10 [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.2 [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.12 [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0. [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18] [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node [...]
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP dst-ports: 30000-32767 * 
iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] => Public Internet (all ranges) : All Connections
iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] : protocol: TCP,UDP
iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] : protocol: TCP,UDP
iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] : protocol: TCP,UDP
iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] => iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] : All Connections
iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] => iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] : All Connections
iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] => iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] : All Connections
iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.8],iks-node[10.241.0.9] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.0.10],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.0.10],iks-node[10.241.0.8],iks-node[10.241.0.9] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP
iks-node[10.241.0.15],iks-node[10.241.0.17] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP
iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => Public Internet (all ranges) : All Connections
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] : protocol: TCP,UDP
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] : protocol: TCP,UDP
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] : protocol: TCP,UDP
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] : All Connections
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] : All Connections
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] : All Connections
iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.128.15],iks-node[10.241.128.18] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP
iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => Public Internet (all ranges) : All Connections
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.14],iks-clusterid:18[10.241.0.11],iks-clusterid:1[10.241.0.16],iks-clusterid:8[10.241.0.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.0.12] : protocol: TCP,UDP
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.11],iks-clusterid:18[10.241.128.9],iks-clusterid:1[10.241.128.16],iks-clusterid:8[10.241.128.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.128.4] : protocol: TCP,UDP
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => iks-api-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.10],iks-clusterid:18[10.241.64.9],iks-clusterid:1[10.241.64.17],iks-clusterid:8[10.241.64.7],iks-registry-r014-ff10dabc-30e3-4559-b756-11842d2591aa[10.241.64.8] : protocol: TCP,UDP
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => iks-node[10.241.0.10],iks-node[10.241.0.15],iks-node[10.241.0.17],iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6],iks-node[10.241.0.8],iks-node[10.241.0.9] : All Connections
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14],iks-node[10.241.128.15],iks-node[10.241.128.18],iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] : All Connections
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] : All Connections
iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.64.16],iks-node[10.241.64.19] => kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] : protocol: TCP,UDP
iks-node[10.241.64.16],iks-node[10.241.64.19],iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] : protocol: TCP,UDP * 
iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] => kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] : protocol: TCP,UDP
kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] => iks-node[10.241.0.15],iks-node[10.241.0.17] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] => iks-node[10.241.128.15],iks-node[10.241.128.18] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:1-1f88ede1db264aab9b79429787ad27e3[LoadBalancer] => iks-node[10.241.64.16],iks-node[10.241.64.19] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] => iks-node[10.241.0.10],iks-node[10.241.0.8],iks-node[10.241.0.9] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] => iks-node[10.241.128.12],iks-node[10.241.128.13],iks-node[10.241.128.14] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:18-202193258a7b440f921e242b2281cda8[LoadBalancer] => iks-node[10.241.64.13],iks-node[10.241.64.14],iks-node[10.241.64.15] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] => iks-node[10.241.0.4],iks-node[10.241.0.5],iks-node[10.241.0.6] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] => iks-node[10.241.128.5],iks-node[10.241.128.6],iks-node[10.241.128.8] : protocol: TCP,UDP dst-ports: 30000-32767
kube-clusterid:8-83951794fa034062a2b4ebbfcb647e3b[LoadBalancer] => iks-node[10.241.64.4],iks-node[10.241.64.5],iks-node[10.241.64.6] : protocol: TCP,UDP dst-ports: 30000-32767

connections are stateful (on TCP) unless marked with *
